progress on contact card, now rendering correctly on mobile

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,25 +1,14 @@
-@media only screen and (max-width: 1200px) {
-    .info-card {
-        margin-left: -3em;
-    }
-    .info-card-parent {
-        width: 100%;
-        padding: 0;
-        margin: 0;
-    }
-    .mobile-center {
-        text-align: center;
-    }
-}
-
 @media only screen and (max-width: 600px) {
-    .boxed {
-        padding: 4em 0.5em 0.5em 1em !important;
-    }
     .mobile-modal {
         margin: 0.1em;
         padding: 0;
         width: 100%;
+    }
+}
+
+@media only screen and (max-width: 400px) {
+    .contact-card-container {
+        padding: 6em 2em 2em 2em !important;
     }
 }
 
